--- a/src/About.css
+++ b/src/About.css
@@ -1,10 +1,12 @@
-
-  .about-container {
+.about-container {
   background-color: #fff;
   background-image: linear-gradient(to bottom right, #fff, #f5f5f5);
   padding: 20px;
+  font-family: Arial, sans-serif;
+  color: #333;
 }
 
+/* Section Button Styles */
 .section-buttons {
   display: flex;
   justify-content: space-between;
@@ -27,6 +29,7 @@
   background-color: #eee;
 }
 
+/* Section Content */
 .section-content-container {
   color: black;
   padding: 20px;
@@ -35,12 +38,16 @@
 .section-content {
   padding: 20px;
   border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-h3 {
+/* Headings and Paragraphs */
+h2, h3 {
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 10px;
+  color: #007b5e;
 }
 
 p {
@@ -48,69 +55,8 @@ p {
   line-height: 1.5;
 }
 
-/* Image slider styles */
-
+/* Image Slider */
 .image-slider {
   position: relative;
   overflow: hidden;
-}
-
-.image-slider img {
-  width: 20%;
-  height: 20%;
-  display: block;
-  margin: auto;
-  transition: all 0.5s ease-in-out;
-}
-.image-slider .next, .image-slider .prev {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  width: auto;
-  padding: 10px 15px;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.8);
-  color: white;
-  font-size: 22px;
-  border-radius: 0 10px 10px 0;
-  transition: all 0.2s ease-in-out;
-}
-
-.image-slider .next:hover, .image-slider .prev:hover {
-  background-color: rgba(0, 0, 0, 0.5);
-}
-
-.image-slider .next {
-  right: 10px;
-}
-
-.image-slider .prev {
-  left: 10px;
-}
-
-.image-slider .dots {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  padding: 20px;
-}
-
-.image-slider .dot {
-  cursor: pointer;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  margin: 0 5px;
-  background-color: #bbb;
-  border-radius: 50%;
-  transition: all 0.2s ease-in-out;
-}
-
-.image-slider .dot.active {
-  background-color: #fff;
-}
-
-  
+  mar
