--- a/src/contact.css
+++ b/src/contact.css
@@ -1,14 +1,29 @@
 .contact-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
+  background-color: #f5f5f5;
   padding: 20px;
 }
 
+.section {
+  color: black;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+  margin-right: 10cm;
+  margin-left: 3cm;
+}
+
+.section p {
+  color: #000000; /* Change color to black */
+}
+
+.section.active {
+  background-color: #f0f0f0;
+}
+
 .doctor-image-container {
-  flex: 1;
-  text-align: center;
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 20px;
 }
 
 .doctor-image {
@@ -17,28 +32,18 @@
   object-fit: contain;
 }
 
-.text-container {
-  flex: 1;
-  padding-left: 20px;
-}
-
-.text-container h2 {
-  font-size: 1.2em;
-  margin-bottom: 10px;
-}
-
-.text-container p {
-  line-height: 1.5;
-  margin-bottom: 10px;
-}
-
 /* Media Queries for Mobile Devices */
 @media (max-width: 768px) {
   .contact-container {
-    flex-direction: column;
+    padding: 15px;
+  }
+
+  .section {
+    margin-right: 0;
+    margin-left: 0;
   }
 
   .doctor-image-container {
-    margin-bottom: 20px;
+    text-align: center; /* Center the image on smaller screens */
   }
 }
